Fix navbar spacing problem

--- a/cravel-app/src/styles/global.css
+++ b/cravel-app/src/styles/global.css
@@ -3,6 +3,18 @@
     margin-top: 56px
 }
 
+.container-height {
+    min-height: 65vh
+}
+
+.row-top {
+    padding-top: 3rem
+}
+
+.row-bottom {
+    padding-bottom: 3rem
+}
+
 .text-light-dark {
     color: #606060!important
 }
